hero gap fix

--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@
     --nav-top: 20px;
     --nav-bottom: 80px;
     --nav-height: 60px;
-    --header: 115px;
+    --header: 100px;
     
 }
 /* ===== Scrollbar CSS ===== */
